@@ -13,7 +13,6 @@ jobs:
         os:
           - ubuntu-latest
         ocaml-compiler:
-          - 4
           - 5
     runs-on: ${{ matrix.os }}
 
@@ -27,7 +26,7 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
           dune-cache: true
       - name: Install dependencies
-        run: sudo apt update && sudo apt install xsltproc --yes
+        run: sudo apt update && sudo apt install xsltproc nft --yes
 
       - name: Opam dependencies
         run: opam install . --deps-only --with-test
@@ -39,7 +38,7 @@ jobs:
         run: opam exec -- dune runtest
 
       - name: Tests
-        run: opam exec -- make tests
+        run: opam exec -- make test
 
       - name: E2E tests
-        run: opam exec -- make test
+        run: opam exec -- make integration
